modification du CSS

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                            
                                 <div class="card-container">
                                     <p class="nom">Auberge La Canebière</p>
-                                    <p class="prix">Nuit à partir de 25 €</p>
+                                    <p class="prix">Nuit à partir de 25<span class="euro">€</span></p>
                                     <div class="star-logement">
                                         <i class="fa-solid fa-star fa-sm"></i>
                                         <i class="fa-solid fa-star fa-sm"></i>
@@ -115,7 +115,7 @@
 
                                 <div class="card-container">
                                     <p class="nom">Hôtel du port</p>
-                                    <p class="prix">Nuit à partir de 52 €</p>
+                                    <p class="prix">Nuit à partir de 52<span class="euro">€</span></p>
                                     <div class="star-logement">
                                         <i class="fa-solid fa-star fa-sm"></i>
                                         <i class="fa-solid fa-star fa-sm"></i>
@@ -132,7 +132,7 @@
 
                                 <div class="card-container">
                                     <p class="nom">Hôtel les mouettes</p>
-                                    <p class="prix">Nuit à partir de 76 €</p>
+                                    <p class="prix">Nuit à partir de 76<span class="euro">€</span></p>
                                     <div class="star-logement">
                                         <i class="fa-solid fa-star fa-sm"></i>
                                         <i class="fa-solid fa-star fa-sm"></i>
@@ -153,7 +153,7 @@
 
                                 <div class="card-container">
                                     <p class="nom">Hôtel de la mer</p>
-                                    <p class="prix">Nuit à partir de 46 €</p>
+                                    <p class="prix">Nuit à partir de 46<span class="euro">€</span></p>
                                     <div class="star-logement">
                                         <i class="fa-solid fa-star fa-sm"></i>
                                         <i class="fa-solid fa-star fa-sm"></i>
@@ -170,7 +170,7 @@
 
                                 <div class="card-container">
                                     <p class="nom">Auberge le panier</p>
-                                    <p class="prix">Nuit à partir de 23 €</p>
+                                    <p class="prix">Nuit à partir de 23<span class="euro">€</span></p>
                                     <div class="star-logement">
                                         <i class="fa-solid fa-star fa-sm"></i>
                                         <i class="fa-solid fa-star fa-sm"></i>
@@ -187,7 +187,7 @@
 
                                 <div class="card-container">
                                     <p class="nom">Hôtel chez Amina</p>
-                                    <p class="prix">Nuit à partir de 96 €</p>
+                                    <p class="prix">Nuit à partir de 96<span class="euro">€</span></p>
                                     <div class="star-logement">
                                         <i class="fa-solid fa-star fa-sm"></i>
                                         <i class="fa-solid fa-star fa-sm"></i>
@@ -219,7 +219,7 @@
 
                             <div class="card-container">
                                 <p class="nom">Hôtel le soleil du matin</p>
-                                <p class="prix">Nuit à partir de 128 €</p>
+                                <p class="prix">Nuit à partir de 128<span class="euro">€</span></p>
                                 <div class="star-populaire">
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
@@ -237,9 +237,9 @@
                             <img class="Img-populaire" src="Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambre d'hôtes Au coeur de l'eau">
 
                             <div class="card-container">
-                                <p class="nom">Chambre d'hôtes Au coeur de l'eau</p>
-                                <p class="prix">Nuit à partir de 71 €</p>
-                                <div class="star-populaire">
+                                <p class="nom">Chambres d'hôtes Au coeur de l'eau</p>
+                                <p class="prix">Nuit à partir de 71<span class="euro">€</span></p>
+                                <div class="star-populaire star-populaire-eau">
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
@@ -257,7 +257,7 @@
 
                             <div class="card-container">
                                 <p class="nom">Hôtel Bleu et Blanc</p>
-                                <p class="prix">Nuit à partir de 68 €</p>
+                                <p class="prix">Nuit à partir de 68<span class="euro">€</span></p>
                                 <div class="star-populaire-blanc">
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
@@ -306,7 +306,7 @@
 
     <footer>
         <div class="propos">
-            <p class="nom-footer">A propos</p>
+            <p class="nom-footer">À propos</p>
             <a href="#">Fonctionnement du site</a>
 
             <a href="#">Conditions générales</a>
