mise en page desktop,tablette,mobile

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                             <div class="card-container">
                                 <p class="nom">Chambres d'hôtes Au coeur de l'eau</p>
                                 <p class="prix">Nuit à partir de 71<span class="euro">€</span></p>
-                                <div class="star-populaire star-populaire-eau">
+                                <div class="star-populaire-eau">
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
