correction du scroll horizontal

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div class="filtre">
             <p id="lien-filtre">Filtres</p>
-            <div class="liens-container">
+            <div class="liens-container-gauche">
                 <div class="lien1">
                     <i class="fa-solid fa-sack-dollar fa-lg"></i>
                     <a href="#">Économique</a>
@@ -61,7 +61,7 @@
                 <!--  </div> -->
             </div>
 
-            <div class="liens-container">
+            <div class="liens-container-droit">
                 <div class="lien3">
                     <i class="fa-solid fa-heart fa-lg"></i>
                     <a href="#">Romantique</a>
@@ -73,7 +73,9 @@
             </div>
         </div>
 
+       
         <div id="info">
+            <!--<div class="circle"></div><i class="fas fa-info"></i></div>-->
             <i class="fa-solid fa-info fa-blue fa-xs"></i>
             <h5>Plus de 500 logements sont disponibles dans cette ville</h5>
         </div>
@@ -128,7 +130,7 @@
                                 <img class="Img-hebergement" src="Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes">
 
                                 <div class="card-container">
-                                    <p class="nom">Hôtel les mouettes</p>
+                                    <p class="nom">Hôtel Les mouettes</p>
                                     <p class="prix">Nuit à partir de 76<span class="euro">€</span></p>
                                     <div class="star-logement">
                                         <i class="fa-solid fa-star fa-sm"></i>
@@ -166,7 +168,7 @@
                                 <img class="Img-hebergement" src="Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le panier">
 
                                 <div class="card-container">
-                                    <p class="nom">Auberge le panier</p>
+                                    <p class="nom">Auberge Le panier</p>
                                     <p class="prix">Nuit à partir de 23<span class="euro">€</span></p>
                                     <div class="star-logement">
                                         <i class="fa-solid fa-star fa-sm"></i>
@@ -183,7 +185,7 @@
                                 <img class="Img-hebergement" src="Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
 
                                 <div class="card-container">
-                                    <p class="nom">Hôtel chez Amina</p>
+                                    <p class="nom">Hôtel Chez Amina</p>
                                     <p class="prix">Nuit à partir de 96<span class="euro">€</span></p>
                                     <div class="star-logement">
                                         <i class="fa-solid fa-star fa-sm"></i>
@@ -215,7 +217,7 @@
                             <img class="Img-populaire" src="Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin">
 
                             <div class="card-container">
-                                <p class="nom">Hôtel le soleil du matin</p>
+                                <p class="nom">Hôtel Le soleil du matin</p>
                                 <p class="prix">Nuit à partir de 128<span class="euro">€</span></p>
                                 <div class="star-populaire">
                                     <i class="fa-solid fa-star fa-sm"></i>
@@ -225,7 +227,6 @@
                                     <i class="fa-solid fa-star fa-grey fa-sm"></i>
                                 </div>
                             </div>
-
                         </div>
                     </a>
                     <a href="#">
