--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <p class="titre">Hébergements à Marseille</p>
                 <section class="hebergement-rouge">
 
-                    <article class="hebergement-jaune">
+                    <section class="hebergement-jaune">
 
                         <div class="card-hebergement">
                             <a href="#">
@@ -143,9 +143,9 @@
                                 </div>
                             </a>
                         </div>
-                    </article>
+                    </section>
 
-                    <article class="hebergement-jaune">
+                    <section class="hebergement-jaune">
                         <div class="card-hebergement">
                             <a href="#">
                                 <img class="Img-hebergement" src="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
@@ -197,7 +197,7 @@
                                 </div>
                             </a>
                         </div>
-                    </article>
+                    </section>
 
                 </section>
                 <p id="next"><a href="#">Afficher plus</a></p>
@@ -210,7 +210,7 @@
                 </div>
 
 
-                <article class="populaire-jaune">
+                <section class="populaire-jaune">
                     <a href="#">
                         <div class="card-populaire">
 
@@ -267,7 +267,7 @@
 
                         </div>
                     </a>
-                </article>
+                </section>
             </section>
         </section>
     </main>
