ménage sur le fichier CSS partie desktop

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <header id="header">
-        <!--barre de navigation-->
+        <!--partie navigation-->
         <nav>
             <img src="Images/logo/Booki.png" width="61" height="19" alt="Logo" />
             <br />
@@ -45,8 +45,8 @@
                 <button id="recherche-loupe" type="submit" class="btn"><i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
         </div>
-        <!--Partie filtre-->
 
+        <!--Partie filtre-->
         <div class="filtre">
             <p id="lien-filtre">Filtres</p>
             <div class="liens-container-gauche">
@@ -58,7 +58,6 @@
                     <i class="fa-solid fa-person fa-lg"></i>
                     <a href="#">Familial</a>
                 </div>
-                <!--  </div> -->
             </div>
 
             <div class="liens-container-droit">
@@ -75,7 +74,6 @@
 
        
         <div id="info">
-            <!--<div class="circle"></div><i class="fas fa-info"></i></div>-->
             <i class="fa-solid fa-info fa-blue fa-xs"></i>
             <h5>Plus de 500 logements sont disponibles dans cette ville</h5>
         </div>
@@ -212,7 +210,7 @@
 
                 <section class="populaire-jaune">
                     <a href="#">
-                        <div class="card-populaire">
+                        <div class="card-populaire-desktop">
 
                             <img class="Img-populaire" src="Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin">
 
@@ -230,7 +228,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="card-populaire card-populaire-eau">
+                        <div class="card-populaire-desktop card-populaire-eau">
 
                             <img class="Img-populaire" src="Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambre d'hôtes Au coeur de l'eau">
 
@@ -249,7 +247,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="card-populaire card-populaire-bleu">
+                        <div class="card-populaire-desktop card-populaire-bleu">
 
                             <img class="Img-populaire" src="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc">
 
