modifié la barre recherche

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!--Partie filtre-->
         <div class="filtre">
             <p id="lien-filtre">Filtres</p>
-            <div class="liens-container-gauche">
+            <div class="liens-container">
                 <div class="lien1">
                     <i class="fa-solid fa-sack-dollar fa-lg"></i>
                     <a href="#">Économique</a>
@@ -60,7 +60,7 @@
                 </div>
             </div>
 
-            <div class="liens-container-droit">
+            <div class="liens-container">
                 <div class="lien3">
                     <i class="fa-solid fa-heart fa-lg"></i>
                     <a href="#">Romantique</a>
