implementé border bottom dans le mobile

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <!--Partie filtre-->
-        <div class="filtre">
+        <section class="filtre">
             <p id="lien-filtre">Filtres</p>
             <div class="liens-container">
                 <div class="lien1">
@@ -70,7 +70,7 @@
                     <a href="#">Animaux autorisés</a>
                 </div>
             </div>
-        </div>
+        </section>
 
        
         <div id="info">
