--- a/index.html
+++ b/index.html
@@ -46,33 +46,30 @@
             </form>
         </div>
 
-        <!--Partie filtre-->
-        <section class="filtre">
-            <p id="lien-filtre">Filtres</p>
-            <div class="liens-container">
-                <div class="lien1">
-                    <i class="fa-solid fa-sack-dollar fa-lg"></i>
+        <div class="filtres">
+            <p class="filtres_titre">Filtres</p>
+            <ul class="filtres_list">
+                <li class="filtres_liens">
+                    <i class="fas fa-money-bill-wave icone_cercle"></i>
                     <a href="#">Économique</a>
-                </div>
-                <div class="lien2">
-                    <i class="fa-solid fa-person fa-lg"></i>
+                </li>
+                <li class="filtres_liens">
+                    <i class="fas fa-child icone_cercle"></i>
                     <a href="#">Familial</a>
-                </div>
-            </div>
+                </li>
 
-            <div class="liens-container">
-                <div class="lien3">
-                    <i class="fa-solid fa-heart fa-lg"></i>
+
+                <li class="filtres_liens">
+                    <i class="fas fa-heart icone_cercle"></i>
                     <a href="#">Romantique</a>
-                </div>
-                <div class=" lien4">
-                    <i class="fa-sharp fa-solid fa-dog fa-lg"></i>
+                </li>
+                <li class="filtres_liens">
+                    <i class="fas fa-dog icone_cercle"></i>
                     <a href="#">Animaux autorisés</a>
-                </div>
-            </div>
-        </section>
+                </li>
+            </ul>
+        </div>
 
-       
         <div id="info">
             <i class="fa-solid fa-info fa-blue fa-xs"></i>
             <h5>Plus de 500 logements sont disponibles dans cette ville</h5>
