--- a/index.html
+++ b/index.html
@@ -48,24 +48,24 @@
 
         <div class="filtres">
             <p class="filtres_titre">Filtres</p>
-            <ul class="filtres_list">
-                    <li class="filtres_liens">
+            <div class="filtres_list">
+                    <div class="filtres_liens">
                         <i class="fas fa-money-bill-wave icone_cercle"></i>
                         <a href="#">Économique</a>
-                    </li>
-                    <li class="filtres_liens">
+                    </div>
+                    <div class="filtres_liens">
                         <i class="fas fa-child icone_cercle"></i>
                         <a href="#">Familial</a>
-                    </li>
-                    <li class="filtres_liens">
+                    </div>
+                    <div class="filtres_liens">
                         <i class="fas fa-heart icone_cercle"></i>
                         <a href="#">Romantique</a>
-                    </li>
-                    <li class="filtres_liens">
+                    </div>
+                    <div class="filtres_liens">
                         <i class="fas fa-dog icone_cercle"></i>
                         <a href="#">Animaux autorisés</a>
-                    </li> 
-            </ul>
+                    </div> 
+            </div>
         </div>
         <div id="info">
             <i class="fa-solid fa-info fa-blue fa-xs"></i>
