corrigé l'ecpacement des étoiles

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <i class="fas fa-heart icone_cercle"></i>
                         <a href="#">Romantique</a>
                     </div>
-                    <div class="filtres_liens">
+                    <div class="filtres_liens liens-dog">
                         <i class="fas fa-dog icone_cercle"></i>
                         <a href="#">Animaux autorisés</a>
                     </div> 
