modifié le hover du menu mobile

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <a href="#">Activités</a>
             </div>
         </nav>
+        <hr id="menu-trait">
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
         <h5>En plein centre-ville ou en pleine nature</h5>
 
@@ -49,22 +50,22 @@
         <div class="filtres">
             <p class="filtres_titre">Filtres</p>
             <div class="filtres_list">
-                    <div class="filtres_liens">
-                        <i class="fas fa-money-bill-wave icone_cercle"></i>
-                        <a href="#">Économique</a>
-                    </div>
-                    <div class="filtres_liens">
-                        <i class="fas fa-child icone_cercle"></i>
-                        <a href="#">Familial</a>
-                    </div>
-                    <div class="filtres_liens">
-                        <i class="fas fa-heart icone_cercle"></i>
-                        <a href="#">Romantique</a>
-                    </div>
-                    <div class="filtres_liens liens-dog">
-                        <i class="fas fa-dog icone_cercle"></i>
-                        <a href="#">Animaux autorisés</a>
-                    </div> 
+                <div class="filtres_liens">
+                    <i class="fas fa-money-bill-wave icone_cercle"></i>
+                    <a href="#">Économique</a>
+                </div>
+                <div class="filtres_liens">
+                    <i class="fas fa-child icone_cercle"></i>
+                    <a href="#">Familial</a>
+                </div>
+                <div class="filtres_liens">
+                    <i class="fas fa-heart icone_cercle"></i>
+                    <a href="#">Romantique</a>
+                </div>
+                <div class="filtres_liens liens-dog">
+                    <i class="fas fa-dog icone_cercle"></i>
+                    <a href="#">Animaux autorisés</a>
+                </div>
             </div>
         </div>
         <div id="info">
