--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--lien vers une feuille de style externe-->
     <link rel="stylesheet" href="CSS/style.css">
-    <!--Indication avec preconnect au serveur goggle-font que j'ai besoin de charger des ressources '. Ici la police Raleway'-->
+    <!--Indication avec preconnect au serveur goggle-font que j'ai besoin de charger des ressources '. Ici chargement de la police Raleway via goggle font'-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <!-- mise en place du kit d'icones-->
+    <!-- intégration des icones via FontAwesome-->
     <script src="https://kit.fontawesome.com/bd510b2bbe.js" crossorigin="anonymous"></script>
     <!--ajouté un favicon et un titre dans l'onglet de la page HTML'-->
     <link rel="icon" type="image/png" href="Images/logo/Booki.png">
