--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header id="header">
         <!--partie navigation-->
         <nav>
-            <img src="Images/logo/Booki.png" width="61" height="19" alt="Logo">
+            <a href="#"><img src="Images/logo/Booki.png" width="61" height="19" alt="Logo"></a>
             <br>
             <div class="menu">
                 <a href="#">Hébergements</a>
@@ -43,8 +43,7 @@
                 <i class="fa-solid fa-location-dot fa-lg"></i>
                 <input type="text" id="fname" name="fname" value="Marseille, France">
                 <label for="recherche"></label>
-                <input id="recherche" type="submit" value="Rechercher">
-                <button id="recherche-loupe" type="submit" class="btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+                <button id="recherche-loupe" type="submit" class="btn"><span id="text">Rechercher</span><i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
         </div>
         <!--partie filtre-->
