modification suite a la soutenance

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
     </header>
 
     <main class="main">
-<!--partie hebergement-->
+        <!--partie hebergement-->
         <section class="hebergement-vert">
-            <section class="hebergement-bleu">
+            <div class="hebergement-bleu">
                 <p class="titre">Hébergements à Marseille</p>
-                <section class="hebergement-rouge">
+                <div class="hebergement-rouge">
 
-                    <section class="hebergement-jaune">
+                    <div class="hebergement-jaune">
 
                         <div class="card-hebergement">
                             <a href="#">
@@ -136,9 +136,9 @@
                                 </div>
                             </a>
                         </div>
-                    </section>
+                    </div>
 
-                    <section class="hebergement-jaune">
+                    <div class="hebergement-jaune">
                         <div class="card-hebergement">
                             <a href="#">
                                 <img class="Img-hebergement" src="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
@@ -190,18 +190,17 @@
                                 </div>
                             </a>
                         </div>
-                    </section>
+                    </div>
 
-                </section>
+                </div>
                 <p id="next"><a href="#">Afficher plus</a></p>
-            </section>
-<!--partie populaire-->
-            <section class="populaire-rouge">
+            </div>
+            <!--partie populaire-->
+            <div class="populaire-rouge">
                 <div class="icone-populaire">
                     <p class="titre">Les plus populaires</p>
                     <i class="fa-solid fa-chart-line fa-blue"></i>
                 </div>
-
 
                 <section class="populaire-jaune">
                     <a href="#">
@@ -257,16 +256,15 @@
                                     <i class="fa-solid fa-star fa-grey fa-sm"></i>
                                 </div>
                             </div>
-
                         </div>
                     </a>
                 </section>
-            </section>
+            </div>
         </section>
-<!--partie activité-->
+        <!--partie activité-->
         <section class="activite">
             <p class="titre-activites">Activités à Marseille</p>
-            <section class="images-activite">
+            <div class="images-activite">
                 <div class="card-activite">
                     <a href="#">
                         <img src="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux-Port">
@@ -291,29 +289,25 @@
                     </a>
                     <p class="nom">Notre-Dame-de-la-Garde</p>
                 </div>
-            </section>
+            </div>
         </section>
     </main>
-<!--partie pied de page--> 
+    <!--partie pied de page-->
     <footer>
         <div class="propos">
             <p class="nom-footer">À propos</p>
             <a href="#">Fonctionnement du site</a>
-
             <a href="#">Conditions générales</a>
-
             <a href="#">Données et confidentialité</a>
         </div>
         <div class="hebergement">
             <p class="nom-footer">Nos hébergements</p>
             <a href="#">Charte qualité</a>
-
             <a href="#">Proposer votre hôtel</a>
         </div>
         <div class="assistance">
             <p class="nom-footer">Assistance</p>
             <a href="#">Centre d'aide</a>
-
             <a href="#">Nous contacter</a>
         </div>
     </footer>
