--- a/index.html
+++ b/index.html
@@ -22,55 +22,56 @@
 </head>
 
 <body>
-    <header id="header">
-        <!--partie navigation-->
+
+
+    <header>
         <nav>
-            <a href="#"><img src="Images/logo/Booki.png" width="61" height="19" alt="Logo"></a>
-            <br>
+            <img id="Booki" src="images/logo/Booki.png" alt="Logo Booki">
             <div class="menu">
-                <a href="#">Hébergements</a>
-                <a href="#">Activités</a>
+                <a class="logo" href="#">Hébergements</a>
+                <a class="logo" href="#">Activités</a>
             </div>
         </nav>
+    </header>
 
-        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-        <h5>En plein centre-ville ou en pleine nature</h5>
+    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+    <h5>En plein centre-ville ou en pleine nature</h5>
 
-        <!-- Partie recherche-->
-        <div class="rechercher">
-            <form class="form" action="#">
-                <i class="fa-solid fa-location-dot fa-lg"></i>
-                <input type="text" id="fname" name="fname" value="Marseille, France">
-                <label for="recherche"></label>
-                <button id="recherche-loupe" type="submit" class="btn"><span id="text">Rechercher</span><i class="fa-solid fa-magnifying-glass"></i></button>
-            </form>
-        </div>
-        <!--partie filtre-->
-        <div class="filtres">
-            <p class="filtres_titre">Filtres</p>
-            <div class="filtres_list">
-                <div class="filtres_liens">
-                    <i class="fas fa-money-bill-wave icone_cercle"></i>
-                    <a href="#">Économique</a>
-                </div>
-                <div class="filtres_liens">
-                    <i class="fas fa-child icone_cercle"></i>
-                    <a href="#">Familial</a>
-                </div>
-                <div class="filtres_liens">
-                    <i class="fas fa-heart icone_cercle"></i>
-                    <a href="#">Romantique</a>
-                </div>
-                <div class="filtres_liens liens-dog">
-                    <i class="fas fa-dog icone_cercle"></i>
-                    <a href="#">Animaux autorisés</a>
-                </div>
+    <!-- Partie recherche-->
+    <div class="rechercher">
+        <form class="form" action="#">
+            <i class="fa-solid fa-location-dot fa-lg"></i>
+            <input type="text" id="fname" name="fname" value="Marseille, France">
+            <label for="recherche"></label>
+            <button id="recherche-loupe" type="submit" class="btn"><span id="text">Rechercher</span><i class="fa-solid fa-magnifying-glass"></i></button>
+        </form>
+    </div>
+    <!--partie filtre-->
+    <div class="filtres">
+        <p class="filtres_titre">Filtres</p>
+        <div class="filtres_list">
+            <div class="filtres_liens">
+                <i class="fas fa-money-bill-wave icone_cercle"></i>
+                <a href="#">Économique</a>
+            </div>
+            <div class="filtres_liens">
+                <i class="fas fa-child icone_cercle"></i>
+                <a href="#">Familial</a>
+            </div>
+            <div class="filtres_liens">
+                <i class="fas fa-heart icone_cercle"></i>
+                <a href="#">Romantique</a>
+            </div>
+            <div class="filtres_liens liens-dog">
+                <i class="fas fa-dog icone_cercle"></i>
+                <a href="#">Animaux autorisés</a>
             </div>
         </div>
-        <div id="info">
-            <i class="fa-solid fa-info fa-blue fa-xs"></i>
-            <h5>Plus de 500 logements sont disponibles dans cette ville</h5>
-        </div>
+    </div>
+    <div id="info">
+        <i class="fa-solid fa-info fa-blue fa-xs"></i>
+        <h5>Plus de 500 logements sont disponibles dans cette ville</h5>
+    </div>
     </header>
 
     <main class="main">
