--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
 
 <body>
 
-
     <header>
         <nav>
-            <img id="Booki" src="Images/logo/Booki.png" alt="Logo Booki">
+            <img id="Booki" src="images/logo/Booki.png" alt="Logo Booki">
             <div class="menu">
                 <a class="logo" href="#">Hébergements</a>
                 <a class="logo" href="#">Activités</a>
