erreur sur le nom du dossier Images

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <header>
         <nav>
-            <img id="Booki" src="images/logo/Booki.png" alt="Logo Booki">
+            <img id="Booki" src="Images/logo/Booki.png" alt="Logo Booki">
             <div class="menu">
                 <a class="logo" href="#">Hébergements</a>
                 <a class="logo" href="#">Activités</a>
