--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
 </head>
 
 <body>
-    
-    <header>
-        <nav>
-            <img id="Booki" src="Images/logo/Booki.png" alt="Logo Booki">
-            <div class="menu">
-                <a class="logo" href="#">Hébergements</a>
-                <a class="logo" href="#">Activités</a>
-            </div>
-        </nav>
+    <header id='menu'>
+        <img class="Booki" src="Images/logo/Booki.png" alt="Logo Booki">
+        <div id='menuF'>
+            <nav id='menuL'>
+                <a href='#'>hébergements</a>
+                <a href='#'>activités</a>
+            </nav>
+        </div>
     </header>   
 
     <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
