rajouté / dans la balise de fin image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <header id='menu'>
-        <img class="Booki" src="Images/logo/Booki.png" alt="Logo Booki">
+        <img class="Booki" src="Images/logo/Booki.png" alt="Logo Booki"/>
         <div id='menuF'>
             <nav id='menuL'>
                 <a href='#'>hébergements</a>
@@ -82,8 +82,8 @@
                     <div class="hebergement-jaune">
 
                         <div class="card-hebergement">
-                            <a href="#">
-                                <img class="Img-hebergement" src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Canebière">
+                            <a href="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+                                <img class="Img-hebergement" src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Canebière"/>
 
                                 <div class="card-container">
                                     <p class="nom">Auberge La Canebière</p>
@@ -100,8 +100,8 @@
                         </div>
 
                         <div class="card-hebergement">
-                            <a href="#">
-                                <img class="Img-hebergement" src="Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
+                            <a href="Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
+                                <img class="Img-hebergement" src="Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port"/>
 
                                 <div class="card-container">
                                     <p class="nom">Hôtel du port</p>
@@ -117,8 +117,8 @@
                             </a>
                         </div>
                         <div class="card-hebergement">
-                            <a href="#">
-                                <img class="Img-hebergement" src="Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes">
+                            <a href="Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
+                                <img class="Img-hebergement" src="Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes"/>
 
                                 <div class="card-container">
                                     <p class="nom">Hôtel Les mouettes</p>
@@ -138,8 +138,8 @@
 
                     <div class="hebergement-jaune">
                         <div class="card-hebergement">
-                            <a href="#">
-                                <img class="Img-hebergement" src="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
+                            <a href="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+                                <img class="Img-hebergement" src="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer"/>
 
                                 <div class="card-container">
                                     <p class="nom">Hôtel de la mer</p>
@@ -155,8 +155,8 @@
                             </a>
                         </div> 
                           <div class="card-hebergement">
-                            <a href="#">
-                                <img class="Img-hebergement" src="Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le panier">
+                            <a href="Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
+                                <img class="Img-hebergement" src="Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le panier"/>
 
                                 <div class="card-container">
                                     <p class="nom">Auberge Le panier</p>
@@ -172,8 +172,8 @@
                             </a>
                         </div>
                         <div class="card-hebergement">
-                            <a href="#">
-                                <img class="Img-hebergement" src="Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
+                            <a href="Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
+                                <img class="Img-hebergement" src="Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina"/>
 
                                 <div class="card-container">
                                     <p class="nom">Hôtel Chez Amina</p>
@@ -201,10 +201,10 @@
                 </div>
 
                 <section class="populaire-jaune">
-                    <a href="#">
+                    <a href="Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
                         <div class="card-populaire-desktop">
 
-                            <img class="Img-populaire" src="Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin">
+                            <img class="Img-populaire" src="Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin"/>
 
                             <div class="card-container">
                                 <p class="nom">Hôtel Le soleil du matin</p>
@@ -219,10 +219,10 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg">
                         <div class="card-populaire-desktop card-populaire-eau">
 
-                            <img class="Img-populaire" src="Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambre d'hôtes Au coeur de l'eau">
+                            <img class="Img-populaire" src="Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambre d'hôtes Au coeur de l'eau"/>
 
                             <div class="card-container">
                                 <p class="nom">Chambres d'hôtes Au coeur de l'eau</p>
@@ -238,10 +238,10 @@
 
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
                         <div class="card-populaire-desktop card-populaire-bleu">
 
-                            <img class="Img-populaire" src="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc">
+                            <img class="Img-populaire" src="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc"/>
 
                             <div class="card-container">
                                 <p class="nom">Hôtel Bleu et Blanc</p>
@@ -264,26 +264,26 @@
             <p class="titre-activites">Activités à Marseille</p>
             <div class="images-activite">
                 <div class="card-activite">
-                    <a href="#">
-                        <img src="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux-Port">
+                    <a href="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
+                        <img src="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux-Port"/>
                     </a>
                     <p class="nom">Vieux-Port</p>
                 </div>
                 <div class="card-activite">
-                    <a href="#">
-                        <img src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+                    <a href="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
+                        <img src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues"/>
                     </a>
                     <p class="nom">Fort de Pomègues</p>
                 </div>
                 <div class="card-activite">
-                    <a href="#">
-                        <img src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des Calanques">
+                    <a href="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
+                        <img src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des Calanques"/>
                     </a>
                     <p class="nom">Parc national des Calanques</p>
                 </div>
                 <div class="card-activite">
-                    <a href="#">
-                        <img src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
+                    <a href="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg">
+                        <img src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde"/>
                     </a>
                     <p class="nom">Notre-Dame-de-la-Garde</p>
                 </div>
