modifier le padding du menu et rajouté le fichier normalize

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!--zone d'affichage de la page web'-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--lien vers une feuille de style externe-->
+    <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/style.css">
     <!--Indication avec preconnect au serveur goggle-font que j'ai besoin de charger des ressources '. Ici chargement de la police Raleway via goggle font'-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
