--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <img class="Booki" src="Images/logo/Booki.png" alt="Logo Booki"/>
         <div id='menuF'>
             <nav id='menuL'>
-                <a href='#'>hébergements</a>
-                <a href='#'>activités</a>
+                <a href='#'>Hébergements</a>
+                <a href='#'>Activités</a>
             </nav>
         </div>
     </header>   
